properties needed for the forgot password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=SoftwareProject
 movieDb.apikey=${API_KEY}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jamzymup@gmail.com
+spring.mail.password=hslm jzif tbnv jdwz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
