email service and using an email for screen safari

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ movieDb.apikey=${API_KEY}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=jamzymup@gmail.com
-spring.mail.password=hslm jzif tbnv jdwz
+spring.mail.username=screensafari321@gmail.com
+spring.mail.password=ztle paip haih cplb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
