application properties updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=SoftwareProject
-movieDb.apikey=${API_KEY}
+movieDb.apikey=2a9ed8c6e1004ae7485271d75e81b95b
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
