update on application properties for render

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=SoftwareProject
 movieDb.apikey=${API_KEY}
+server.port=${PORT:8080}
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=screensafari321@gmail.com
-spring.mail.password=ztle paip haih cplb
+spring.mail.username=${GMAIL_USER}
+spring.mail.password=${GMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
