--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mail.password=${GMAIL_PASS}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:28583/railway
 spring.datasource.username=${MYSQL_USER}
 spring.datasource.password=${MYSQL_PASS}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
